byteman additions for debugging RESTEASY-3118